# BOAR

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  boar.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_boar.bat
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci.yml
benchmarks/: ackley_function.py  ackley_function_constrained.py  rosenbrock_function.py  rosenbrock_function_constrained.py  run_all_benchmarks.py
docs/: benchmarks.rst  conf.py  generate_docs.py  index.rst  installation.rst  loss_function.rst  optimization_configuration.rst  quickstart.rst
docs/_static/images/ackley_benchmark/: ackley_results.txt
docs/_static/images/ackley_benchmark/dim_1/: boar_tried_vectors_dim1.txt  optuna_tried_vectors_dim1.txt
docs/_static/images/ackley_benchmark/dim_10/: boar_tried_vectors_dim10.txt  optuna_tried_vectors_dim10.txt
docs/_static/images/ackley_benchmark/dim_15/: boar_tried_vectors_dim15.txt  optuna_tried_vectors_dim15.txt
docs/_static/images/ackley_benchmark/dim_2/: boar_tried_vectors_dim2.txt  optuna_tried_vectors_dim2.txt
docs/_static/images/ackley_benchmark/dim_20/: boar_tried_vectors_dim20.txt  optuna_tried_vectors_dim20.txt
docs/_static/images/ackley_benchmark/dim_3/: boar_tried_vectors_dim3.txt  optuna_tried_vectors_dim3.txt
docs/_static/images/ackley_benchmark/dim_4/: boar_tried_vectors_dim4.txt  optuna_tried_vectors_dim4.txt
docs/_static/images/ackley_benchmark/dim_5/: boar_tried_vectors_dim5.txt  optuna_tried_vectors_dim5.txt
docs/_static/images/ackley_constrained/: ackley_constrained_results.txt
docs/_static/images/rosenbrock/: rosenbrock_results.txt
docs/_static/images/rosenbrock_constrained/: rosenbrock_constrained_results.txt
src/: basement_tools.py  bo_optimizer.py  cell_centroid.py  friction_calibration.py  functions_io.py  functions_sampler.py  utils.py
tests/: __init__.py  test_benchmarks_smoke.py  test_smoke.py  test_utils.py
user_defined_configs/: constants.py  function_loss.py  user_options.yaml
